
2018-02-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: renamed cob_strcasecmp to cb_strcasecmp
	* reserved.c (default_reserved_words_list): removed EBCDIC handling
	  as the list is always sorted now
	* reserved.c (initialize_reserved_words_if_needed): use case
	  sensitive comparision when sorting default_reserved_words_list

2018-02-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_get_long_long, cb_get_u_long_long): fix bug #492
	  adjusted literal size check
	* tree.c, typeck.c, codegen.c: first approach to fix tree cast
	  errors in REPORTWRITER code
	* codegen.c: moved parts of (output_funcall) to new functions
	  (output_funcall_typed) and (output_funcall_typed_report)

2018-02-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, tree.h [COB_TREE_DEBUG]: make sure that we don't enter
	  a loop of cb_tree cast errors, possible as (cb_name) is called
	  which may result in another call of (cobc_tree_cast_error);
	  removed compiler specific handling
	* cobc.c (cobc_abort_terminate): add parameter indicating that
	  the user should report the error

2018-01-30  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix generation of dump-code for fields with IS EXTERNAL

2018-01-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: postponed check for dangling LINKAGE items
	  from entry point generation to program validation, allowing to
	  only warn items that are actually in use, checked in new
	  function (has_sub_reference)
	* cobc.c (process_filename): set internal filename before checking
	  for valid name to get better error messages

2018-01-25  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (default_reserved_words_list): no longer assumed to be
	  sorted - this caused hard to understand errors when it
	  wasn't. (initialize_reserved_words_if_needed) now sorts it.

2018-01-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
