@@ -570,3 +570,60 @@ AT_DATA([prog.cob], [
 AT_CHECK([$COMPILE prog.cob ], [0], [], [])
 
 AT_CLEANUP
+
+
+AT_SETUP([Incorrect USAGE clause])
+AT_KEYWORDS([report])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+
+       ENVIRONMENT DIVISION.
+       INPUT-OUTPUT SECTION.
+       FILE-CONTROL.
+       SELECT report-file ASSIGN EXTERNAL PRINTOUT
+            ORGANIZATION LINE SEQUENTIAL.
+
+       DATA DIVISION.
+       FILE SECTION.
+       FD  report-file REPORT rp.
+
+       WORKING-STORAGE SECTION.
+       01  foo  PIC X(20).
+
+       REPORT SECTION.
+       RD  rp PAGE LIMIT 3.
+
+       01  rp-detail TYPE DE.
+         02  LINE PLUS 1.
+            03  FILLER   SOURCE foo  PIC X(30).
+            03  FILLER                PIC X(6) VALUE "<--->".
+            03  THING1                PIC 9(3) BINARY VALUE 12.
+            03  FILLER                PIC 9 COMP-5 VALUE 1.
+            03  THING3                COMP-2          VALUE 12.
+
+       PROCEDURE DIVISION.
+           OPEN OUTPUT report-file.
+           INITIATE rp.
+
+           MOVE "hello" TO foo.
+            GENERATE rp-detail.
+
+           MOVE "goodbye" TO foo.
+            GENERATE rp-detail.
+
+           TERMINATE rp.
+             CLOSE report-file.
+           STOP RUN.
+           END PROGRAM prog.
+])
+
+AT_CHECK([$COMPILE prog.cob], [1], [],
+[prog.cob:25: error: REPORT SECTION item 'THING1' should be USAGE DISPLAY
+prog.cob:26: error: REPORT SECTION item 'FILLER 4' should be USAGE DISPLAY
+prog.cob:27: error: REPORT SECTION item 'THING3' should be USAGE DISPLAY
+])
+
+AT_CLEANUP
+
